# srpg

./: .gitignore  CMakeLists.txt  main.cpp
common/mpl/: copy_cvr.hpp  make_integer_type.hpp
common/rrpc/: async_ops.hpp  connection.hpp  connection_old.hpp  container_device.hpp  conversion.hpp  decode.hpp  encode.hpp  endpoint.hpp  endpoint_manager.hpp  export.h  fixed.hpp  idl.hpp  local_client.hpp  main.cpp  mpsc_queue.hpp  object_pool.hpp  options.hpp  packet.hpp  serializable_field.hpp  session.hpp  trivial_binary_iarchive.hpp  trivial_binary_oarchive.hpp
common/rrpc/old/: connection.hpp  future.hpp  header.hpp  idl.hpp  integer_sequence.hpp  method.hpp  package.hpp  rrpc.hpp  session.hpp  streambuf.hpp
include/data/: tpl_card.hpp  tpl_unit.hpp
include/logic/: basic_attr.hpp  entity.h  game_table.hpp  map.h  operation.h  srpg.i  unit.hpp  vertex.h
src/data/: tpl_card.h  tpl_skill.h
src/game_map/: cmd.h  game_map.h  map_event.h  vertex_group.cpp  vertex_group.h
src/logic/: entity.h  game_map.h  game_table.cpp  game_table.h  history.h  operation.h  player.h  unit.hpp  vec.h  visitor.h
src/utils/: using.h
tools/: CoroutineEx.cs
tools/excel_tool/: .gitignore  main.py  test.xlsx
tools/excel_tool/excel_tool/: Meta.py  checker.py  constraint.py  index.py  loader.py  meta.py  metadata.py  parse.py  test.py  type.py  type2.py
